--- a/Federapp/pom.xml
+++ b/Federapp/pom.xml
@@ -44,8 +44,6 @@
                         </outputDirectory>
                     </configuration>
                 </plugin>
-
-
             </plugins>
 
 
@@ -145,6 +143,13 @@
             <artifactId>httpclient5</artifactId>
             <version>5.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     
