--- a/Federapp/src/main/resources/log4j2.properties
+++ b/Federapp/src/main/resources/log4j2.properties
@@ -1,8 +1,8 @@
 # Extra logging related to initialization of Log4j
 # Set to debug or trace if log4j initialization is failing
-status = trace
+status = error
 # Root logger level
-rootLogger.level = trace
+rootLogger.level = error
 
 # Name of the configuration
 name = ConsoleLogConfigDemo
